Fix all lazy loading and CORS issues